--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 
 <body>
     <main id="root"></main>
+    <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-firestore.js"></script>
+    <script src="scripts/db-init.js"></script>
     <script src="/node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/handlebars/dist/handlebars.js"></script>
     <script src="/node_modules/sammy/lib/sammy.js"></script>
